# PostNow-REST-API

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  3_CORRECOES_IMPLEMENTADAS.md  ANALISE_7_PROBLEMAS_ENCONTRADOS.md  ANALISE_COMPLETA_IMAGENS.md  ARQUITETURA.md  BUG_FIX_CRIACAO_CAMPANHA.md  BUG_FIX_GERACAO_POSTS.md  BUG_FIX_ID_UNDEFINED.md  BUG_FIX_POSTS_SEM_CONTEUDO.md  CAMPAIGNS_FRONTEND_REUSE_GUIDE.md  CAMPAIGNS_IMPLEMENTATION_GUIDE.md  CAMPAIGNS_MVP_CONCLUIDO.md  CAMPAIGNS_STEP_BY_STEP_PLAN.md  CAMPANHA_5_COMPLETA.md  CHANGELOG.md  CHECKLIST_PRE_APRESENTACAO.md  COMO_TESTAR_NOVO_SISTEMA.md  CONFORMIDADE_REGRAS.md  CONTINUACAO_DEFINITIVA.md  CORRECOES_APLICADAS.md  DECISAO_PROXIMO_PASSO.md  DEPLOY_CELERY_REDIS.md  DIAGNOSTICO_FINAL_SQLITE.md  DIAGNOSTICO_PROFUNDO.md  ENCERRAMENTO_FINAL_DEFINITIVO.md  ENCERRAMENTO_FINAL_OFICIAL.md  ENTREGA_FINAL_COMPLETA.md  ENTREGA_FINAL_SISTEMA_CAMPANHAS.md  ENTREGA_JORNADAS_ADAPTATIVAS.md  ESTADO_ATUAL_E_PROXIMAS_TAREFAS.md  ESTADO_ATUAL_MVP_PARA_EQUIPE.md  FINALIZACAO_SESSAO_COMPLETA.md  GOOGLE_OAUTH_DEBUG.md  GUIA_DEMONSTRACAO_EQUIPE.md  GUIA_RAPIDO.md  GUIA_RAPIDO_TESTE.md  (+76 more)
.github/: PULL_REQUEST_TEMPLATE.md
.vercel/: project.json
APIKeys/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
Analytics/: admin.py  apps.py  constants.py  models.py  serializers.py  urls.py  views.py
AuditSystem/: apps.py  daily_report_service.py  dashboard_service.py  example_usage.py  middleware.py  models.py  services.py  urls.py  views.py
ClientContext/: apps.py  models.py  serializers.py  urls.py  (+2 more)
(+591 files in other folders)
