[project]
name = "postnow-rest-api"
version = "1.0.0"
description = "REST API for AI-powered content generation"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    "venv",
    "migrations",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["Sonora_REST_API", "IdeaBank", "CreatorProfile", "Subscription", "CreditSystem", "ClientContext", "Analytics", "AuditSystem", "GlobalOptions", "Carousel", "Campaigns", "Users"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.coverage.run]
source = ["IdeaBank", "CreatorProfile", "CreditSystem", "ClientContext", "Analytics", "AuditSystem", "Campaigns", "Users"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["venv", "tests"]
